Fix settings not being aligned to the top of the div

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -29,6 +29,7 @@
   padding-inline: 35px;
   display: grid;
   width: min(850px, 100%);
+  align-content: start;
 }
 
 .settings-option {
